# fire-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/cameras/: cam1.yaml
dashboard/: app.py
notebooks/: firewatch_colab_train.ipynb  firewatch_eval.ipynb  firewatch_kaggle_train.ipynb
src/firewatch/: __init__.py  annotate.py  cli.py  config.py  pipeline.py  zonetool.py
src/firewatch/detection/: __init__.py  detector.py  exposure.py  model.py  tf_detector.py  tf_model.py  types.py
src/firewatch/events/: __init__.py  debounce.py  event.py  store.py
src/firewatch/events/sinks/: __init__.py  base.py  company_stub.py  evidence.py  log_sink.py
src/firewatch/floors/: __init__.py  mapper.py  zones.py
src/firewatch/sources/: __init__.py  base.py  factory.py  file_source.py  rtsp_source.py  stream.py  webcam_source.py
tests/: test_detector.py  test_events.py  test_exposure.py  test_floors.py  test_oversampling.py  test_pipeline.py  test_sources.py  test_tf_backend.py  test_tf_eval.py  test_threshold_tuning.py  test_training.py  test_zonetool.py
tools/: demo_model.py  detect_video.py  label_zones.py  run_demo.py  scan_video.py
training/: __init__.py  dataset.py  download_data.py  eval.py  export.py  prepare_dfire.py  prepare_indoor.py  tf_dataset.py  tf_eval.py  tf_train.py  tf_tune_thresholds.py  train.py
