[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "firewatch"
version = "0.1.0"
description = "Camera-based fire/smoke detection with per-floor localization (license-free)"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
# TensorFlow/KerasHub backend (alternative to the default torch backend).
# Native Windows is CPU-only; use WSL2 or Colab for GPU. Needs Python<=3.13.
tf = [
    "tensorflow>=2.19",
    "keras-hub",
]

[project.scripts]
firewatch = "firewatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
